[SaiVijayaKumar] Adding:Creating FlexBox Layout

--- a/BridgeLabzPage/BridgeLabzHtmlPage.html
+++ b/BridgeLabzPage/BridgeLabzHtmlPage.html
@@ -38,6 +38,8 @@
         font-size: 16px;
         line-height: 2;
         letter-spacing: 1px;
+        /*by default the content having 500 so it will no use if you use from 600 it changes*/
+        font-weight: 500;
     }
 </style>
 
