[SaiVijayaKumar] Adding:Creating FlexBox Layout

--- a/FlexBox/FlexLayout.html
+++ b/FlexBox/FlexLayout.html
@@ -1,5 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+<head>
 <title>FlexBox Layout</title>
+</head>
 <style>
     * {
         /*if we use this it will treat pading,width,height as one consideration
@@ -60,3 +63,4 @@
         <footer>Footer</footer>
     </div>
 </body>
+</html>
