--- a/FlexBox/FlexImage.html
+++ b/FlexBox/FlexImage.html
@@ -16,6 +16,7 @@
       border: 3px solid #000;
       box-shadow: 3px 3px 8px 9px rgba(0,0,0,0.3); 
       max-width: 23vw;
+      max-height: 9vmax;
     }
   </style>
   <body>
@@ -27,6 +28,8 @@
         <img src="../FlexBox/Assests/5.jpg" alt="5 photo">
         <img src="../FlexBox/Assests/3.jpg" alt="3 photo">
         <img src="../FlexBox/Assests/1.jpg" alt="1 photo">
+        <img src="../FlexBox/Assests/4.jpg" alt="4 photo">
+        <img src="../FlexBox/Assests/5.jpg" alt="5 photo">
       </main>
   </body>
 </html>
